tests/rpm-pkgs/lmdb-0.9.29-2.fc35/output-exp@cbmc/scan-results.err
Error: COMPILER_WARNING:
openldap-LMDB_0.9.29-8ad7be2510414b9506ec9f9e24f24d04d9b04a1a/libraries/liblmdb/mdb_dump.c: scope_hint: In function 'main'
openldap-LMDB_0.9.29-8ad7be2510414b9506ec9f9e24f24d04d9b04a1a/libraries/liblmdb/mdb_dump.c:194:30: warning[-Wimplicit-fallthrough=]: this statement may fall through
#  194 |                         list = 1;
#      |                         ~~~~~^~~
openldap-LMDB_0.9.29-8ad7be2510414b9506ec9f9e24f24d04d9b04a1a/libraries/liblmdb/mdb_dump.c:196:17: note: here
#  196 |                 case 'a':
#      |                 ^~~~
openldap-LMDB_0.9.29-8ad7be2510414b9506ec9f9e24f24d04d9b04a1a/libraries/liblmdb/mdb_dump.c: scope_hint: At top level
cc1: note: unrecognized command-line option '-Wno-unknown-warning-option' may have been intended to silence earlier diagnostics
#  192|   			break;
#  193|   		case 'l':
#  194|-> 			list = 1;
#  195|   			/*FALLTHROUGH*/;
#  196|   		case 'a':
